<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_first"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_activity_home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_favourite"
            android:title="@string/title_activity_favourite" />
    </group>

    <group
        android:id="@+id/menu_second"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_critical"
            android:icon="@drawable/ic_menu_critical"
            android:title="@string/status_critical"
            />
        <item
            android:id="@+id/nav_warning"
            android:icon="@drawable/ic_menu_warning"
            android:title="@string/status_warning" />
        <item
            android:id="@+id/nav_normal"
            android:icon="@drawable/ic_menu_normal"
            android:title="@string/status_normal" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_all"
            android:title="@string/all" />
    </group>

    <group
        android:id="@+id/menu_third"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings_title" />
    </group>

</menu>
